convert a few more thailand references to vietnam

--- a/src/template.mustache
+++ b/src/template.mustache
@@ -11,7 +11,7 @@
   }
   else {
     // No AMD. Set module as a global variable
-    root.gridmapLayoutThailand = factory();
+    root.gridmapLayoutVietnam = factory();
   }
 }(this, function () {
   return {{{data}}};
